fixed broken link, adjusted hero spacing

--- a/src/sass/partials/_homepage.scss
+++ b/src/sass/partials/_homepage.scss
@@ -16,6 +16,7 @@ Homepage
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
